testing max_user_namespaces

--- a/jenkins-slaves/jenkins-slave-image-mgmt/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-image-mgmt/Dockerfile
@@ -18,6 +18,8 @@ RUN INSTALL_PKGS="skopeo podman atomic openscap-utils" && \
       --releasever=${RHEL_RELEASEVER} \
       $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
-    yum clean all
+    yum clean all && \
+    echo 63362 > /proc/sys/user/max_user_namespaces
+
 
 USER 1001
